ResponseEntity Optimization